fixed hero not showing up in web4

--- a/scss/home.scss
+++ b/scss/home.scss
@@ -7,7 +7,7 @@
         max-width: 1280px;
         width: 100%;
         height: 500px;
-        background-image: url(../../images/hero.jpg);
+        background-image: url(../images/hero.jpg);
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
